testsuite/tests/backtrace/backtrace_cycle1.byte.reference
Fatal error: exception Not_found
Raised at file "backtrace_cycle1.ml", line 3, characters 23-32
Called from file "backtrace_cycle1.ml", line 4, characters 5-19
Called from file "backtrace_cycle1.ml", line 4, characters 5-19
Recursion called 1998 times:
  * Called from file "backtrace_cycle1.ml", line 4, characters 5-19
Called from file "backtrace_cycle1.ml", line 8, characters 2-14
